--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
 
 # RubyMine Files
 projectFilesBackup/
 .idea/
+
+*.gem
+*.rdb
+tmp/
+test/dummy/
+
+.rvmrc
+
 
